web-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-server
  labels:
    app: rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
      - name: rest-server
        image: adth3249/webrest:v16
