web-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service
  labels:
    app: rest
spec:
  selector:
    app: rest
  ports:
  - port: 80
    targetPort: 3000
